# CodeByExample

./: .gitignore  CodeByExample.code-workspace  README.md
csharp/helloworld/: README.md
csharp/lang/: .editorconfig  README.md  lang.sln
dart/: hello_world.dart
data-oriented-programming/javascript/: package-lock.json  package.json
fish/: argv.fish  array.fish
gleam/helloworld/: README.md  gleam.toml  manifest.toml
golang/: Makefile  README.md  array_slice.go  command.go  crypto_rand.go  go.mod  goroutine.go  goto.go  heap.go  main.go  sort.go  strings.go  syncmap.go  time.go
golang/experiments/: duplicate_memory_access.go  duplicate_memory_access_http_client.go  duplicate_memory_access_http_server.go  duplicate_memory_write.go  duplicate_memory_write_syncmap.go
golang/jank/: binaryTree.go  dsp_and_count.go  myHeapSample.go  stdin2browser.go
golang/lang/: go_by_example_test.go  string_test.go
golang/override/: main.go
golang/test/: expect.go  sum_test.go
python/pipenv-sample/: Pipfile  reuqest_to_pythonorg.py
rust/command-line-rust/: .gitignore
rust/hello-anyhow/: Cargo.toml
rust/hello-axum/: Cargo.toml
rust/sqlx_sqlite/: .gitignore  Cargo.toml  README.md
rust/sqlx_sqlite/src/: main.rs
scala/: cats-eq.sc  finch-example.sc  hello.sc  hello.scala  match.sc
scala/dwango/: controle_syntax.sc  trait.sc  type_parameter.sc
typescript/: .eslintignore  .gitignore  README.md  jest.config.js  tsconfig.json
typescript/lang/: package-lock.json  package.json
typescript/monorepo/: .gitignore  README.md  package-lock.json  package.json  (+2 more)
(+100 files in other folders)
